--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -5,9 +5,12 @@
 
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
 name: Deploy Jekyll site to Pages
-run-name: ${{ github.actor }} is implementing a workflow.
+  #  run-name: ${{ github.actor }} is implementing a jekyll workflow.
 
 on:
+  schedule:
+    # run daily at 05:30
+    - cron:  '30 5 * * *'
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
@@ -67,6 +70,15 @@ jobs:
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
+        # Install Node as this is needed for PostCSS
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - run: npm ci
+      - run: npm test
+      # Install plugins (from your package.json)
+      - run: npm install
 
   # Deployment job
   deploy:
