Install node and update packages

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -76,9 +76,9 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-          cache-dependency-path: ../../public/package-lock.json
-      - run: npm ci
-      - run: npm test
+            #cache-dependency-path: ../../public/package-lock.json
+            #- run: npm ci
+            #- run: npm test
       # Install plugins (from your package.json)
       - run: npm install
 
