--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -77,10 +77,10 @@ jobs:
           node-version: 18
           cache: 'npm'
           cache-dependency-path: ${{ github.workspace }}/public/package.json
-      - run: npm install
-            # - run: npm ci
+      - run: npm ci
       - run: npm test
       # Install plugins (from your package.json)
+      - run: npm install
 
   # Deployment job
   deploy:
