Actions still exploring paths

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -46,6 +46,8 @@ jobs:
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
+          echo "github action path"
+          echo ${{ github.action_path }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
   # Build job
   build:
