Install node run

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -47,6 +47,7 @@ jobs:
         run: |
           ls ${{ github.workspace }}
           echo "{path}" >> $GITHUB_PATH
+          echo $GITHUB_PATH
       - run: echo "🍏 This job's status is ${{ job.status }}."
   Install-node-js:
     runs-on: ubuntu-latest
