Install node run

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -48,6 +48,8 @@ jobs:
           ls ${{ github.workspace }}
           echo "{path}" >> $GITHUB_PATH
           echo $GITHUB_PATH
+          echo "package.json: "
+          echo ls ${{ github.workspace }}/public
       - run: echo "🍏 This job's status is ${{ job.status }}."
   Install-node-js:
     runs-on: ubuntu-latest
