--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -60,11 +60,12 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-          cache-dependency-path: ${{ github.action_path }}/public/package-lock.json
+            # cache-dependency-path: ${{ github.action_path }}/public/package-lock.json
+      - name: Install dependencies
       - run: npm ci
-      - run: npm test
       # Install plugins (from your package.json)
       - run: npm install
+      - run: npm test
   # Build job
   build:
     runs-on: ubuntu-latest
