--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -59,9 +59,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-          cache: 'npm'
+            # cache: 'npm'
             # cache-dependency-path: ${{ github.action_path }}/public/package-lock.json
-      - name: Install dependencies
       - run: npm ci
       # Install plugins (from your package.json)
       - run: npm install
