--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -61,7 +61,7 @@ jobs:
           node-version: 18
             # cache: 'npm'
             # cache-dependency-path: ${{ github.action_path }}/public/package-lock.json
-      - run: npm ci
+            #- run: npm ci
       # Install plugins (from your package.json)
       - run: npm install
       - run: npm test
