--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -51,6 +51,7 @@ jobs:
           npm ci
           npm install -D tailwindcss postcss autoprefixer
           npx tailwindcss init
+          npm i postcss postcss-cli
 
   # Build job
   build:
