--- a/public/package.json
+++ b/public/package.json
@@ -5,5 +5,9 @@
     "postcss": "^8.4.32",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.0"
+  },
+  "dependencies": {
+    "postcss-loader": "^7.3.4",
+    "postcss-scss": "^4.0.9"
   }
 }
