--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -53,6 +53,10 @@ jobs:
           npx tailwindcss init
           npm i postcss postcss-cli
           npm install redis
+          npm install browserify
+          npm install webpack webpack-cli --save-dev
+          npm install --save lodash
+          npm install --save-dev style-loader css-loader
 
   # Build job
   build:
@@ -72,7 +76,9 @@ jobs:
         uses: actions/configure-pages@v4
       - name: Build with Jekyll
         # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        run: |
+          npm run build -- --color
+          bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
