--- a/public/package.json
+++ b/public/package.json
@@ -1,12 +1,31 @@
 {
+  "name": "personal-website-project",
+  "version": "1.0.0",
+  "description": "My live website project hosted on github by jekyll",
+  "private": true,
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js"
+  },
+  "keywords": [],
+  "author": "Felix Muthui Igwanya",
+  "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
     "autoprefixer": "^10.4.16",
+    "css-loader": "^6.9.0",
     "cssnano": "^6.0.2",
     "postcss": "^8.4.32",
     "postcss-cli": "^11.0.0",
-    "tailwindcss": "^3.4.0"
+    "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.0",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "browserify": "^17.0.0",
+    "lodash": "^4.17.21",
     "postcss-loader": "^7.3.4",
     "postcss-scss": "^4.0.9",
     "redis": "^4.6.12"
