Modified github actions to include initial setup for node tests

--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -57,7 +57,13 @@ jobs:
           npm install webpack webpack-cli --save-dev
           npm install --save lodash
           npm install --save-dev style-loader css-loader
+      - name: Build project
+        working-directory: ./public
+        run: |
           npm run build -- --color
+          npm test
+
+
 
 
   # Build job
