--- a/public/package.json
+++ b/public/package.json
@@ -16,18 +16,23 @@
     "autoprefixer": "^10.4.16",
     "css-loader": "^6.9.0",
     "cssnano": "^6.0.2",
-    "postcss": "^8.4.32",
+    "postcss": "^8.4.33",
     "postcss-cli": "^11.0.0",
+    "postcss-loader": "^7.3.4",
+    "postcss-preset-env": "^9.3.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.0",
     "webpack": "^5.89.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "browserify": "^17.0.0",
+    "crypto": "^1.0.1",
     "lodash": "^4.17.21",
-    "postcss-loader": "^7.3.4",
+    "net": "^1.0.2",
     "postcss-scss": "^4.0.9",
-    "redis": "^4.6.12"
+    "redis": "^4.6.12",
+    "tls": "^0.0.1"
   }
 }
