--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ source: public
 timezone: Africa/Nairobi
 verbose: false
   #layouts_dir: templates/
-title: "Jekyll Actions Demo"
+title: "Felix Muthui personal website"
 url: "https://igwanya.github.io/felix-muthui/"
 plugins:
   - jekyll-feed
@@ -14,8 +14,3 @@ defaults:
       path: "assets/images"
     values:
       image: true
-
-# files Jekyll should not delete from .site
-keep_files:
-  - css/tailwind.css
-  - css/tailwind.css.map
